<resources>
    <string name="app_name">myRuns2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="AccountName">Account Preferences</string>
    <string name="AccountDetails">Name,E-mail,Class,etc</string>
    <string name="userProfile">User Profile</string>
    <string name="app_name1">MyRuns1</string>
    <string name="name_box">Your name here</string>
    <string name="email_box">Your E-Mail here</string>
    <string name="number">Your phone number here</string>
    <string name="class_filling">Your Class here</string>
    <string name="name_view">Name</string>
    <string name="e_mail_view">Email:</string>
    <string name="number_view">Phone:</string>
    <string name="gender_view">Gender</string>
    <string name="photo">Profile Photo</string>
    <string name="Class_View">Class:</string>
    <string name="Class_edit">e.g.2012</string>
    <string name="Major_box">Your major here</string>
    <string name="Major_heading">Major</string>
    <string name="user">User Profile</string>
    <string name="PrivacySetting">Privacy Setting</string>
    <string name="Additional">Additional Settings</string>
    <string name="Unit">Unit Preference</string>
    <string name="UnitSmall">Select the units</string>
    <string name="Comments">Comments</string>
    <string name="EnterComments">Enter your comments</string>
    <string name="Misc">Misc.</string>
    <string name="Web">Webpage</string>
    <string name="Link">
        <a href="https://www.sfu.ca/computing.html">https://www.sfu.ca/computing.html</a>

    </string>
    <string name="AcitivityInput">Activity Type</string>
    <string name="Start">Start</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="Duration">Duration</string>
    <string name="Distance">Distance</string>
    <string name="calories">Calories</string>
    <string name="heart">Heart Rate</string>
    <string name="Comment">Comment</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>

    <string-array name="types">
        <item>Manual</item>
        <item>GPS</item>
        <item>Automatic</item>
    </string-array>

</resources>